--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,16 @@ repositories {
 
 
 dependencies {
-	compile project(":changedb-core")
+	compile("org.springframework.boot:spring-boot-starter-web")
+	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+	
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	compile("com.h2database:h2")
 	
+	runtime("org.webjars:jquery:1.11.2")
+	runtime("org.webjars:angularjs:1.3.8")
+	runtime("org.webjars:bootstrap:3.3.4")
+	runtime("org.webjars:angular-ui-bootstrap:0.12.0")
 }
 
 eclipse {
