--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,12 @@ dependencies {
 	runtime("org.webjars:angularjs:1.3.8")
 	runtime("org.webjars:bootstrap:3.3.4")
 	runtime("org.webjars:angular-ui-bootstrap:0.12.0")
+	
+	// - This is a new version that allow external documentation links (javadoc is one) but
+	//   it require some porting effort
+	// compile("io.springfox:springfox-swagger2:2.2.1")
+	compile("com.mangofactory:swagger-springmvc:0.9.4")
+	compile("org.webjars:swagger-ui:2.0.12")
 }
 
 eclipse {
